; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/trm/extr_trm.c_NVRAM_trm_wait_30us.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/trm/extr_trm.c_NVRAM_trm_wait_30us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRMREG_GEN_TIMER = common dso_local global i32 0, align 4
@TRMREG_GEN_STATUS = common dso_local global i32 0, align 4
@GTIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @NVRAM_trm_wait_30us to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @NVRAM_trm_wait_30us(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @TRMREG_GEN_TIMER, align 4
  %4 = call i32 @trm_reg_write8(i32 5, i32 %3)
  br label %5

5:                                                ; preds = %12, %1
  %6 = load i32, i32* @TRMREG_GEN_STATUS, align 4
  %7 = call i32 @trm_reg_read8(i32 %6)
  %8 = load i32, i32* @GTIMEOUT, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  br i1 %11, label %12, label %13

12:                                               ; preds = %5
  br label %5

13:                                               ; preds = %5
  ret void
}

declare dso_local i32 @trm_reg_write8(i32, i32) #1

declare dso_local i32 @trm_reg_read8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
